<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="commandDecoder" Id="{7eba7217-46bb-46ef-8690-bb184ce360f6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM commandDecoder
VAR
	command 	: STRING(255);
	Head_Loaded : STRING;
	index 		: INT := 0;
	
	actualX 	: LREAL;
	actualY 	: LREAL;
	actualZ 	: Lreal;
	
	wait100ms : TON;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[command := GVL.stReceivedData;
command := F_ToLCase(command);
GVL.stReceivedData := '';

wait100ms(IN := COM.bEnable, pt := T#500MS);

CASE index OF
	0:	//commands
		COM.bEnable := FALSE;
		COM.bCouple := FALSE;
		COM.bHome 	:= FALSE;
		COM.inUSe 	:= FALSE;
		
		IF 		(command = 'reset') THEN
			index := 10;
			command := '';
    	ELSIF 	(command = 'homing') THEN
			index := 100;
			command := '';
		ELSIF 	(command = 'z to zero') THEN
			index := 110;
			command := '';
		ELSIF 	(command = 'set vel') THEN
			index := 120;
			command := '';
		ELSIF 	(command = 'go xyz') THEN
			index := 200;
			command := '';
		ELSIF 	(command = 'go x') THEN
			index := 210;
			command := '';
		ELSIF 	(command = 'go y') THEN
			index := 220;
			command := '';
		ELSIF 	(command = 'go z') THEN
			index := 230;
			command := '';
		ELSIF 	(command = 'exec gcode') THEN
			index := 250;
			command := '';
		ELSIF 	(command = 'read pos') THEN
			index := 300;
			command := '';
		ELSIF 	(command = 'error') THEN
			index := 999;
			command := '';
		ELSE
			index := 0;
		END_IF;
		
	10: //reset
		COM.bReset 	:= TRUE;
		COM.bReset 	:= FALSE;
		
		COM.bEnable := FALSE;
		COM.bCouple := FALSE;
		COM.bHome 	:= FALSE;
		COM.inUSe 	:= FALSE;
		COM.bMoveX 	:= FALSE;
		COM.bMoveY 	:= FALSE;
		COM.bMoveZ 	:= FALSE;
		
		index 		:= 0;
		
	100: //Homing
		COM.bEnable := TRUE;
		COM.bCouple := TRUE;
		COM.bHome 	:= TRUE;
		
		IF COM.bHomeBusy THEN
			COM.inUSe 	:= TRUE;
		ELSE
			COM.inUSe 	:= FALSE;
		END_IF
		
		IF COM.bHomeDone THEN
			COM.bEnable := FALSE;
			COM.bCouple := FALSE;
			COM.bHome 	:= FALSE;
			COM.inUSe 	:= FALSE;
			index 	:= 0;
		END_IF
		
	110: //set Z position to zero
			COM.bSetZ 		:= TRUE;
			IF (COM.PosZ = 0 AND COM.bValid) THEN
				COM.bSetZ 	:= FALSE;
				index 		:= 0;
			END_IF
			
	120: //Set velocity
		COM.velX := 200;
		COM.velY := 200;
		COM.velZ := 2;
		index 		:= 0;
	
	200: //Go to xyz Pos
    	COM.absX := 100;
		COM.absY := 100;
		COM.absZ := 0;
		
		COM.bEnable := TRUE;
		COM.bCouple := TRUE;
		
		IF wait100ms.Q THEN 
			COM.bMoveX 	:= TRUE;
			COM.bMoveY 	:= TRUE;
			COM.bMoveZ 	:= TRUE;
		END_IF
		
		IF COM.bHomeBusy THEN
			COM.inUSe 	:= TRUE;
		ELSE
			COM.inUSe 	:= FALSE;
		END_IF
		
		IF COM.bMoveDone THEN
			COM.bEnable := FALSE;
			COM.bCouple := FALSE;
			COM.inUSe 	:= FALSE;
			COM.bMoveX 	:= FALSE;
			COM.bMoveY 	:= FALSE;
			COM.bMoveZ 	:= FALSE;
			index 	:= 0;
		END_IF
		
	210: //Go X Pos
	    COM.absX := 50;
		COM.bEnable := TRUE;
		COM.bCouple := TRUE;
		
		IF wait100ms.Q THEN 
			COM.bMoveX 	:= TRUE;
		END_IF
		
		IF COM.bHomeBusy THEN
			COM.inUSe 	:= TRUE;
		ELSE
			COM.inUSe 	:= FALSE;
		END_IF
		
		IF COM.bMoveXDone THEN
			COM.bEnable := FALSE;
			COM.bCouple := FALSE;
			COM.inUSe 	:= FALSE;
			COM.bMoveX 	:= FALSE;
			index 	:= 0;
		END_IF

	220: //Go Y Pos
		COM.bEnable := TRUE;
		COM.absY := 50;
		
		IF wait100ms.Q THEN 
			COM.bMoveY 	:= TRUE;
		END_IF
				
		IF COM.bHomeBusy THEN
			COM.inUSe 	:= TRUE;
		ELSE
			COM.inUSe 	:= FALSE;
		END_IF
		
		IF COM.bMoveYDone THEN
			COM.bEnable := FALSE;
			COM.bCouple := FALSE;
			COM.inUSe 	:= FALSE;
			COM.bMoveY 	:= FALSE;
			index 	:= 0;
		END_IF

	230: //Go Z Pos
		COM.absZ := -1;
		COM.bEnable := TRUE;
		
		IF wait100ms.Q THEN 
			COM.bMoveZ 	:= TRUE;
		END_IF
		
		IF COM.bHomeBusy THEN
			COM.inUSe 	:= TRUE;
		ELSE
			COM.inUSe 	:= FALSE;
		END_IF
		
		IF COM.bMoveZDone THEN
			COM.bEnable := FALSE;
			COM.bCouple := FALSE;
			COM.inUSe 	:= FALSE;
			COM.bMoveZ 	:= FALSE;
			index 	:= 0;
		END_IF
		
	250: //Execute Gcode--------------------------------------------------------------------------------------------
		
	300: //Read XYZ
		actualX 	:= COM.PosX;
		actualY 	:= COM.Posy;
		actualZ 	:= COM.PosZ;
		IF COM.bValid THEN
			index 	:= 0;
		END_IF

	999: //error
			COM.bEnable := FALSE;
			IF(command = 'reset')THEN
				index := 0;
			END_IF

	ELSE //errorstate
	index := 0;
END_CASE;
]]></ST>
    </Implementation>
    <LineIds Name="commandDecoder">
      <LineId Id="27" Count="0" />
      <LineId Id="653" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="698" Count="0" />
      <LineId Id="394" Count="0" />
      <LineId Id="699" Count="0" />
      <LineId Id="396" Count="1" />
      <LineId Id="419" Count="0" />
      <LineId Id="718" Count="1" />
      <LineId Id="717" Count="0" />
      <LineId Id="428" Count="0" />
      <LineId Id="625" Count="1" />
      <LineId Id="624" Count="0" />
      <LineId Id="407" Count="1" />
      <LineId Id="444" Count="0" />
      <LineId Id="465" Count="0" />
      <LineId Id="467" Count="1" />
      <LineId Id="480" Count="1" />
      <LineId Id="479" Count="0" />
      <LineId Id="483" Count="1" />
      <LineId Id="482" Count="0" />
      <LineId Id="486" Count="1" />
      <LineId Id="485" Count="0" />
      <LineId Id="489" Count="1" />
      <LineId Id="488" Count="0" />
      <LineId Id="612" Count="1" />
      <LineId Id="611" Count="0" />
      <LineId Id="618" Count="1" />
      <LineId Id="617" Count="0" />
      <LineId Id="615" Count="1" />
      <LineId Id="614" Count="0" />
      <LineId Id="492" Count="1" />
      <LineId Id="491" Count="0" />
      <LineId Id="413" Count="1" />
      <LineId Id="398" Count="0" />
      <LineId Id="628" Count="0" />
      <LineId Id="417" Count="0" />
      <LineId Id="622" Count="1" />
      <LineId Id="723" Count="0" />
      <LineId Id="725" Count="1" />
      <LineId Id="724" Count="0" />
      <LineId Id="722" Count="0" />
      <LineId Id="732" Count="1" />
      <LineId Id="730" Count="1" />
      <LineId Id="641" Count="0" />
      <LineId Id="627" Count="0" />
      <LineId Id="399" Count="0" />
      <LineId Id="421" Count="1" />
      <LineId Id="430" Count="0" />
      <LineId Id="433" Count="2" />
      <LineId Id="665" Count="1" />
      <LineId Id="436" Count="2" />
      <LineId Id="450" Count="0" />
      <LineId Id="442" Count="1" />
      <LineId Id="451" Count="0" />
      <LineId Id="441" Count="0" />
      <LineId Id="440" Count="0" />
      <LineId Id="463" Count="1" />
      <LineId Id="449" Count="0" />
      <LineId Id="478" Count="0" />
      <LineId Id="496" Count="0" />
      <LineId Id="498" Count="0" />
      <LineId Id="497" Count="0" />
      <LineId Id="476" Count="1" />
      <LineId Id="471" Count="0" />
      <LineId Id="504" Count="2" />
      <LineId Id="470" Count="0" />
      <LineId Id="431" Count="0" />
      <LineId Id="401" Count="0" />
      <LineId Id="452" Count="0" />
      <LineId Id="461" Count="0" />
      <LineId Id="512" Count="2" />
      <LineId Id="711" Count="0" />
      <LineId Id="713" Count="0" />
      <LineId Id="715" Count="1" />
      <LineId Id="714" Count="0" />
      <LineId Id="712" Count="0" />
      <LineId Id="523" Count="0" />
      <LineId Id="667" Count="3" />
      <LineId Id="527" Count="4" />
      <LineId Id="533" Count="0" />
      <LineId Id="542" Count="1" />
      <LineId Id="541" Count="0" />
      <LineId Id="534" Count="0" />
      <LineId Id="524" Count="0" />
      <LineId Id="462" Count="0" />
      <LineId Id="453" Count="0" />
      <LineId Id="521" Count="0" />
      <LineId Id="519" Count="1" />
      <LineId Id="706" Count="0" />
      <LineId Id="708" Count="0" />
      <LineId Id="710" Count="0" />
      <LineId Id="707" Count="0" />
      <LineId Id="548" Count="0" />
      <LineId Id="671" Count="3" />
      <LineId Id="551" Count="6" />
      <LineId Id="560" Count="0" />
      <LineId Id="544" Count="0" />
      <LineId Id="454" Count="0" />
      <LineId Id="456" Count="0" />
      <LineId Id="517" Count="0" />
      <LineId Id="694" Count="0" />
      <LineId Id="701" Count="0" />
      <LineId Id="697" Count="0" />
      <LineId Id="563" Count="0" />
      <LineId Id="700" Count="0" />
      <LineId Id="702" Count="0" />
      <LineId Id="675" Count="3" />
      <LineId Id="568" Count="5" />
      <LineId Id="575" Count="0" />
      <LineId Id="577" Count="0" />
      <LineId Id="561" Count="0" />
      <LineId Id="455" Count="0" />
      <LineId Id="459" Count="0" />
      <LineId Id="595" Count="0" />
      <LineId Id="515" Count="0" />
      <LineId Id="581" Count="0" />
      <LineId Id="736" Count="1" />
      <LineId Id="734" Count="1" />
      <LineId Id="679" Count="3" />
      <LineId Id="585" Count="5" />
      <LineId Id="593" Count="1" />
      <LineId Id="578" Count="0" />
      <LineId Id="629" Count="0" />
      <LineId Id="596" Count="0" />
      <LineId Id="621" Count="0" />
      <LineId Id="597" Count="0" />
      <LineId Id="604" Count="1" />
      <LineId Id="601" Count="0" />
      <LineId Id="608" Count="2" />
      <LineId Id="494" Count="0" />
      <LineId Id="447" Count="0" />
      <LineId Id="503" Count="0" />
      <LineId Id="507" Count="2" />
      <LineId Id="448" Count="0" />
      <LineId Id="445" Count="0" />
      <LineId Id="406" Count="0" />
      <LineId Id="391" Count="0" />
      <LineId Id="390" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>